--- a/main.html
+++ b/main.html
@@ -8,9 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<div id=test>
+			<h1>"Welcome to the world of Web developement"</h1>
+		</div>
 	
-
-
     <script type="text/javascript" src="./script.js">
 </script>
 
