--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 		<div id=test>
-			<h1>"Welcome to the world of Web developement"</h1>
+			<H1>Welcome to the world of Web developement</H1>
 		</div>
 	
     <script type="text/javascript" src="./script.js">
