--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<div id=test>
+		<div id="test">
 			<H1>Welcome to the world of Web developement</H1>
 		</div>
 	
