--- a/main.html
+++ b/main.html
@@ -8,9 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<div id="test">
-			<p>Welcome to the world of Web developement</p>
-		</div>
+		<div id="test">Welcome to the world of Web developement</div>
 	
     <script type="text/javascript" src="./script.js">
 </script>
