--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<div id="test">Welcome to the world of Web developement</div>
-	
+		<div id="test"><b>Welcome to the world of Web developement</b></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
