--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 		<div id="test">Welcome to the world of Web development</div>
-<!--     <script type="text/javascript" src="./script.js">
+   <script type="text/javascript" src="./script.js">
 </script>
- -->
 </body>
 
 </html>
